[gd_scene load_steps=3 format=3 uid="uid://b5yyix8n88df3"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_sg8mw"]
[ext_resource type="PackedScene" uid="uid://dpjvexosl7hdp" path="res://Scenes/opções.tscn" id="2_dfj82"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sg8mw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 0.564706)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseMenu" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Pausado"
horizontal_alignment = 1

[node name="Salvar" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Salvar"

[node name="ResumeButton" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Resumir"

[node name="Menu principal" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Menu principal"

[node name="Configurações" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Configurações"

[node name="QuitButton" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Sair do jogo"

[node name="Ajuda" type="Button" parent="CenterContainer/PauseMenu"]
layout_mode = 2
text = "Ajuda
"

[node name="Ajuda2" type="VBoxContainer" parent="CenterContainer"]
visible = false
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/Ajuda2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "A que não sei o que não sei que la
E bla bla bla bla bla blabla bla blab
Ueeeeeepa"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false
text_direction = 1

[node name="Voltar" type="Button" parent="CenterContainer/Ajuda2"]
layout_mode = 2
text = "Voltar
"

[node name="Configurações2" parent="CenterContainer" instance=ExtResource("2_dfj82")]
visible = false
layout_mode = 2

[connection signal="pressed" from="CenterContainer/PauseMenu/Salvar" to="." method="_on_salvar_pressed"]
[connection signal="pressed" from="CenterContainer/PauseMenu/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CenterContainer/PauseMenu/Menu principal" to="." method="_on_menu_principal_pressed"]
[connection signal="pressed" from="CenterContainer/PauseMenu/Configurações" to="." method="troca_visibilidade" binds= ["CenterContainer/Configurações2"]]
[connection signal="pressed" from="CenterContainer/PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CenterContainer/PauseMenu/Ajuda" to="." method="_on_ajuda_pressed"]
[connection signal="pressed" from="CenterContainer/Ajuda2/Voltar" to="." method="_on_voltar_pressed"]
